# ignorance

./: Cargo.toml  README.md
.github/workflows/: general.yml  main.yml  schedule.yml
src/: file.rs  language.rs  lib.rs  loader.rs  main.rs  path.rs  prompt.rs  request.rs  url.rs
tests/: cli.rs  create_url.rs  path.rs  request.rs  storage.rs  url.rs
