[package]
name = "ignorance"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
clap = "2.32.0"
reqwest = "0.11.4"
dirs = "1.0.4"
lazy_static = "1.4.0"

[dev-dependencies]
tempfile = "3.2.0"
assert_cmd = "2.0.0"
predicates = "2.0.2"
