[package]
name = "ignorance"
description = "Another client tool for generating .gitignore files."
version = "0.1.0"
edition = "2018"
keywords = [".gitignore"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/Vui-Chee/ignorance"
repository = "https://github.com/Vui-Chee/ignorance"
readme = "README.md"
exclude = [
    ".github",
    "tests",
]

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
clap = "2.32.0"
reqwest = "0.11.4"
dirs = "1.0.4"
lazy_static = "1.4.0"
loading = "*"

[dev-dependencies]
tempfile = "3.2.0"
assert_cmd = "2.0.0"
predicates = "2.0.2"
